updated project according to plan
all plans go to hell when they meet the 'python plan.py' command, or it's equivalent.  this one certainly did.

--- a/package.json
+++ b/package.json
@@ -1,35 +1,27 @@
 {
-  "name": "@modelcontextprotocol/server-filesystem",
+  "name": "mcp-server-filesystem",
   "version": "0.6.2",
-  "description": "MCP server for filesystem access",
-  "license": "MIT",
-  "author": "Anthropic, PBC (https://anthropic.com)",
-  "homepage": "https://modelcontextprotocol.io",
-  "bugs": "https://github.com/modelcontextprotocol/servers/issues",
+  "description": "MCP File System Server",
+  "main": "dist/index.js",
   "type": "module",
   "bin": {
     "mcp-server-filesystem": "dist/index.js"
   },
-  "files": [
-    "dist"
-  ],
   "scripts": {
-    "build": "tsc && shx chmod +x dist/*.js",
-    "prepare": "npm run build",
-    "watch": "tsc --watch"
+    "build": "tsc",
+    "dev": "tsc --watch",
+    "test": "node --test test/*.test.js"
   },
   "dependencies": {
-    "@modelcontextprotocol/sdk": "0.5.0",
+    "@modelcontextprotocol/sdk": "^0.6.2",
     "diff": "^5.1.0",
-    "glob": "^10.3.10",
-    "minimatch": "^10.0.1",
-    "zod-to-json-schema": "^3.23.5"
+    "minimatch": "^9.1.2",
+    "zod": "^3.22.4",
+    "zod-to-json-schema": "^3.20.7",
+    "fs-promises": "0.1.2"
   },
   "devDependencies": {
-    "@types/diff": "^5.0.9",
-    "@types/minimatch": "^5.1.2",
     "@types/node": "^20.11.0",
-    "shx": "^0.3.4",
     "typescript": "^5.3.3"
   }
 }
